<resources>
    <string name="app_name">Shooees</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_profile">Profile</string>

    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Running</string>
    <string name="tab_text_3">Training</string>
    <string name="tab_text_4">Basket</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="desc_login">Sign in to Continue</string>
    <string name="title_email">Email Address</string>
    <string name="title_password">Password</string>
    <string name="desc_sign_up">Sign Up to Continue</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_name">Name</string>
    <string name="title_username">Username</string>
    <string name="title_popular_shoes">Popular Shoes</string>
    <string name="title_all_shoes">All Shoes</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="title_cart">Cart</string>
</resources>