<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_login"
            android:alpha="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/desc_login"
            android:alpha="0"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in"
            app:layout_constraintStart_toStartOf="@+id/tv_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />

        <TextView
            android:id="@+id/tvEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescSignIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/primaryColor"
            android:hint="Your Email"
            android:alpha="0"
            android:textColorHint="@color/text_placeholer_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:ems="10"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="Your Password"
            android:textColorHint="@color/text_placeholer_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            android:alpha="0"
            app:endIconTint="@color/text_placeholer_color"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_text"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="@+id/input_password_layout"
            app:layout_constraintStart_toStartOf="@+id/input_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/input_password_layout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="Don't have an account?"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_sign_Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Sign Up"
                android:textColor="@color/primaryColor" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
